make fixed height responsive on mobile

--- a/packages/assets/scss/01-atoms/_iframe.scss
+++ b/packages/assets/scss/01-atoms/_iframe.scss
@@ -29,6 +29,23 @@
       }
   }
 
+  /* Make iframe height responsive on different screensizes */
+  &--fixed {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+
+    iframe, object, embed {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   @media ($bp-small-min) {
 
     &--right &__container {
